<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kagu.mymonitoring.qa.ui.home.HomeFragmentQa"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_qa" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kagu.mymonitoring.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.kagu.mymonitoring.chatList.ChatsListFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chats_list" />
</navigation>
