<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/msgLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="16dp"
        android:text="@string/time"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/show_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:autoLink="web"
            android:background="@drawable/background_right"
            android:padding="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/hello"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/msgIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_image"
            android:background="@drawable/background_right"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/txt_see"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/seen"
        android:textAlignment="textEnd" />

</LinearLayout>